Closed
Bug 43935
Opened 25 years ago
Closed 24 years ago
The "About Mozilla" choice in the Apple menu does not work
Categories
(Core :: XUL, defect, P4)
Tracking
()
VERIFIED
FIXED
mozilla0.9
People
(Reporter: zach, Assigned: mikepinkerton)
References
Details
(Keywords: helpwanted, platform-parity, regression)
User-Agent: Mozilla/5.0 (Macintosh; N; PPC; en-US; m17) Gecko/20000626
BuildID: 2000006208
Nothing happens when I click About Mozilla in the apple menu.
Reproducible: Always
To reproduce:
1.Open the apple menu
2.Choose "about mozilla"
| Assignee | ||
Comment 1•25 years ago
|
||
how very strange, this used to work. probably broken by beard's carbon landing,
assigning over to him.
patrick, if it wasn't you please kick it back to me or saari. Thanks!
Assignee: trudelle → beard
| Assignee | ||
Updated•25 years ago
|
Keywords: nsbeta2,
regression
Comment 2•25 years ago
|
||
Putting on [nsbeta2-] radar. Is this a Netscape problem, or is it related to
only Mozilla?
Whiteboard: [nsbeta2-]
| Reporter | ||
Comment 3•25 years ago
|
||
This is only mozilla. It works fine in Netscape 4.7 I don't know about
6.0PR1
Comment 4•25 years ago
|
||
This does not work in the commercial build as well.
Comment 5•25 years ago
|
||
Clearing [nsbeta2-] for reconsideration. Note that this is a recent regression,
and is one of those simple things by which end users will judge the quality
of the product. If this is a complicated fix, then, no, I wouldn't hold beta2
for it, but if it is a straightforward fix, it would be a shame not to get
this working again for beta2.
Whiteboard: [nsbeta2-]
Comment 7•25 years ago
|
||
I wouldn't hold beta2 for this one. I agree it should be easy to fix.
Status: NEW → ASSIGNED
Removing nsbeta2+ for re-eval by Bug Triage daily team.
Whiteboard: [nsbeta2+]
| Assignee | ||
Comment 10•25 years ago
|
||
I've looked into this a little bit and it appears that the plumbing is somehow
doing the wrong thing. When the apple menu code goes searching for a node with
the id "releaseName," it finds something but not the same node as when you choose
"about mozilla" from the "Help" menu. I've looked at both paths in the debugger
(the "Help" menu path works) and the content node to which the event is being
dispatched is _different_. The mDocument of each content node is the same,
however.
I'm not sure how this can be, but it appears that GetElementById() is returning
the wrong node. Pushing over to waterson, cc'ing saari and hyatt
Assignee: beard → waterson
Status: ASSIGNED → NEW
Updated•25 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → M18
Comment 11•25 years ago
|
||
Putting on [NEED INFO] radar. PDT needs to know impact to user and risk of fix
to make a call on this bug. Is there a workaround to get to this info, like
typing in about:mozilla in the URL bar? If not, is there any legal issues?
Whiteboard: [NEED INFO]
| Assignee | ||
Comment 12•25 years ago
|
||
there are no legal issues, there is a workarond (use the help menu), but this is
such a basic expectation for the platform. It's beyond embarrasing.
Comment 13•25 years ago
|
||
Putting on [nsbeta2-] radar. Not critical to beta2.
Whiteboard: [NEED INFO] → [nsbeta2-]
Updated•25 years ago
|
Keywords: correctness,
nsbeta3
Comment 14•25 years ago
|
||
pink: any luck cooking up a smaller test case?
Comment 15•25 years ago
|
||
Sorry pink, I'm throwing this backatcha. This is just beyond my Mac juju to be
able to debug.
Assignee: waterson → pinkerton
Status: ASSIGNED → NEW
Comment 16•25 years ago
|
||
nsbeta3+, but P4 (not committing to fix for N6), helpwanted. cc sfraser
| Assignee | ||
Updated•25 years ago
|
Status: NEW → ASSIGNED
Comment 17•25 years ago
|
||
Mass-moving P4/P5 bugs to Future milestone. We just don't have any time left
for these, although we could still consider taking a good patch. Adding
Helpwanted keyword.
Target Milestone: M18 → Future
Comment 19•25 years ago
|
||
To avoid complete and utter humiliation, perhaps you could remove the `About
Mozilla' item from the Apple menu altogether, in commercial builds, until the bug
is fixed. Just a suggestion ...
URL: N/A
Comment 20•25 years ago
|
||
Thanks- if we can't fix this for rtm, that will certainly be considered.
| Reporter | ||
Comment 21•25 years ago
|
||
I think that if we can't fix this for beta3, we should remove the menu option
and if we can't get it for 6.0 we should 6.1this bug so it will definitely get
fixed for 6.1
| Reporter | ||
Comment 22•25 years ago
|
||
Adding RTM keyword to see if we can get this fixed for rtm
Whiteboard: [nsbeta2-][nsbeta3-] → [nsbeta2-][nsbeta3-], rtm
Comment 23•25 years ago
|
||
Administrivia: you wanted to add rtm as a keyword, not to the Status Whiteboard.
It is a keyword now.
Keywords: rtm
Whiteboard: [nsbeta2-][nsbeta3-], rtm → [nsbeta2-][nsbeta3-]
| Reporter | ||
Comment 24•25 years ago
|
||
oops. My bad. thx
Comment 26•25 years ago
|
||
Pink and I both looked at this, and we're still not sure what is going on. I'll
take another look.
Comment 27•25 years ago
|
||
too late now, rtm-
Whiteboard: [nsbeta2-][nsbeta3-] → [nsbeta2-][nsbeta3-][rtm-]
| Assignee | ||
Updated•25 years ago
|
Target Milestone: Future → mozilla1.0
Comment 28•25 years ago
|
||
*** Bug 58839 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 30•25 years ago
|
||
minor? This is at least normal. If we can't get tis working, we should take it
out (the menu option, not the severity field)!
Severity: minor → normal
Comment 31•25 years ago
|
||
Boy, this is embarassing. Isn't there a way to link the Menu Action to fill out
"About:" in the URL field? That seems to be what NS4 does anyway...Removing rtm-
to beg for limbo status.
Whiteboard: [nsbeta2-][nsbeta3-][rtm-] → [nsbeta2-][nsbeta3-]
Comment 32•25 years ago
|
||
rtm-. This does not fit the current 'pull it off the wire' criteria. Limbo
status is for bugs that have an attached, reviewed patch that is ready to
checkin, and that PDT decides is worth the risk/benefit ratio. This bug ain't
there.
Whiteboard: [nsbeta2-][nsbeta3-] → [nsbeta2-][nsbeta3-][rtm-]
Comment 33•25 years ago
|
||
Can someone supply the code to zap the about mozilla item from the apple menu,
please?
Comment 34•25 years ago
|
||
Is that even possible?
Comment 35•25 years ago
|
||
Timeless, removing the menu item is as simple as removing it from the menu
resource and adjusting the code that deals with hits on the Apple menu.
Or, you could disable the item in the menu resource until it gets fixed. Removing
the menu item isn't a solution.
Comment 36•25 years ago
|
||
I think it's better to keep the menu item, otherwise you get an apple menu with a
separator at the top (yuck).
Comment 37•25 years ago
|
||
*** Bug 59576 has been marked as a duplicate of this bug. ***
Comment 38•25 years ago
|
||
Here is where "about mozilla" is created and added to the menubar. May help
someone:
http://lxr.mozilla.org/mozilla/source/widget/src/mac/nsMenuBar.cpp#524
Pinkerton's discussion of the problem goes over my head I'm afraid.
Comment 39•24 years ago
|
||
The following is reported by Steve Linke at
http://www.macintouch.com/netscape6.html
Keywords: nsmac2
| Reporter | ||
Comment 40•24 years ago
|
||
Adding mozilla1.0 keyword, bumping up priority because of negitive
feedback on this. This needs to get on a "must be fixed before anything
else gets released I don't care what PDT has to say" list. This is really
getting annoyinh.
Keywords: mozilla1.0
Priority: P4 → P2
Comment 41•24 years ago
|
||
This is a polish issue. I admit, it looks bad, but I'd much rather have speed,
memory and stability issues dealt with before this. Face it, this doesn't affect
the user.
| Reporter | ||
Comment 42•24 years ago
|
||
"this doesn't affect the user." I beg to disagree on this point. Consider that
this is a basic expection of the platform, not much different then alt,
control, del on windows in that regard. While the apple human interface
does not require an about box, the page at http://developer.apple.com/
techpubs/mac/HIGuidelines/HIGuidelines-98.html#MARKER-2-202 does
recomend it. Since we are a project with a focus on standards
compliance, we should also focus on platform standards, such as having
a working about this application choice.
Comment 43•24 years ago
|
||
[Restoring previous priority. Zach, you must not touch the Priority field unless
you are fixing the bug yourself.]
I would actually prefer it if `About'-type items disappeared from the Apple menu
altogether -- since apps can have varying numbers of such items, their presence
reduces the usability of the Apple menu by making the position of the global
items in it inconsistent between apps. (Don't tell any Mac-heads I said that ...)
But if this is going to be fixed, then XUL needs a class="about" for menu items;
items with this class would be automagically inserted in the Apple menu when an
XP Toolkit was run on Mac OS, as well as being present in the position that the
application author had specified. Last time I looked, this `About' item was
hard-coded in a C++ file, and that isn't going to work for other XP Toolkit apps.
Priority: P2 → P4
| Assignee | ||
Updated•24 years ago
|
Target Milestone: mozilla1.0 → mozilla0.9
Updated•24 years ago
|
Comment 44•24 years ago
|
||
sr=sfraser for the patch that pink is about to attach
| Assignee | ||
Updated•24 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 45•24 years ago
|
||
Index: mozilla/widget/src/mac/nsMenu.cpp
===================================================================
RCS file: /m/pub/mozilla/widget/src/mac/nsMenu.cpp,v
retrieving revision 1.90
diff -u -2 -r1.90 nsMenu.cpp
--- nsMenu.cpp 2000/10/28 22:16:49 1.90
+++ nsMenu.cpp 2001/02/12 21:43:28
@@ -609,5 +609,5 @@
event.message = NS_MENU_ACTION;
-
nsCOMPtr<nsIContent> contentNode = do_QueryInterface(mDOMNode);
+
nsCOMPtr<nsIContent> contentNode = do_QueryInterface(domElement);
if (!contentNode) {
NS_ERROR("DOM Node doesn't support the nsIContent interface required to
handle DOM events.");
fix checked in (whew!)
You need to log in
before you can comment on or make changes to this bug.
Description
•