fix 'about mozilla' item in apple menu. make sure we call HandleDOMEvent on the correct dom node ;) r=pchen/a=sfraser. bug 43935